--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version" : "0.0.0",
     "repository" : {
         "type" : "git",
-        "url" : "git://github.com/substack/node-fig.git"
+        "url" : "git://github.com/substack/node-figc.git"
     },
     "main" : "index.js",
     "keywords" : [
