--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name" : "figc",
     "description" : "Merge config files with command-line arguments",
-    "version" : "0.0.0",
+    "version" : "0.0.1",
     "repository" : {
         "type" : "git",
         "url" : "git://github.com/substack/node-figc.git"
@@ -23,11 +23,11 @@
         "test" : "tap test/*.js"
     },
     "dependencies" : {
-        "optimist" : "0.3.x",
-        "hashish" : "0.0.x"
+        "optimist" : "~0.3.1",
+        "deepmerge" : "git://github.com/substack/deepmerge.git"
     },
     "devDependencies" : {
-        "tap" : "0.1.x"
+        "tap" : "~0.2.4"
     },
     "engines" : {
         "node" : ">=0.4.0"
