--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name" : "figc",
     "description" : "Merge config files with command-line arguments",
-    "version" : "0.0.1",
+    "version" : "0.0.2",
     "repository" : {
         "type" : "git",
         "url" : "git://github.com/substack/node-figc.git"
@@ -24,7 +24,7 @@
     },
     "dependencies" : {
         "optimist" : "~0.3.1",
-        "deepmerge" : "git://github.com/substack/deepmerge.git"
+        "deepmerge" : "~0.2.1"
     },
     "devDependencies" : {
         "tap" : "~0.2.4"
